--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,41 @@
-h1 {
-  font-family: "Libre Baskerville", serif;
+:root {
+  --heading-font: "Libre Baskerville", serif;
+  --default-font: "Poppins", sans-serif;
+  --primary-background-color: #e4c0c4;
+  --primary-text-color: #9c6670;
+  --text-color: #111111;
+  --button-background-color: #b17f88;
 }
+h1,
+h2,
 p {
-  font-family: "Poppins", sans-serif;
+  font-family: var(--heading-font);
+}
+h1 {
+  color: var(--primary-text-color);
+  font-size: 96px;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+h2 {
+  opacity: 66%;
+  color: var(--text-color);
+  margin-bottom: 100px;
+}
+
+.homepage-top {
+  background-color: var(--primary-background-color);
+  text-align: center;
+  padding: 200px 20px;
+  line-height: 1.5;
+}
+.intro {
+  font-size: 64px;
+}
+.btn-branding {
+  background-color: var(--button-background-color);
+  border-radius: 81px;
+  padding: 15px 40px;
+  color: white;
+  font-family: var(--default-font);
 }
