--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@
 }
 h1,
 h2,
+h3,
 p {
   font-family: var(--heading-font);
 }
@@ -17,8 +18,12 @@ h1 {
   font-size: 96px;
   font-weight: bold;
   margin-bottom: 30px;
+  text-align: center;
 }
-h2 {
+h3 {
+  font-size: 18px;
+}
+.main-h2 {
   color: var(--text-color);
   margin-bottom: 100px;
 }
@@ -26,13 +31,13 @@ h2 {
 .homepage-top {
   background-color: var(--primary-background-color);
   text-align: center;
-  padding: 100px 20px;
+  padding: 150px 20px;
   line-height: 1.5;
 }
 .intro {
   font-size: 64px;
 }
-.btn-branding {
+.homepage-top-button {
   background-color: var(--button-background-color);
   border-radius: 81px;
   padding: 15px 40px;
@@ -70,6 +75,46 @@ ul li {
 .shadow {
   box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%);
 }
+.navbar-brand {
+  font-size: 34 px;
+  color: var(--primary-text-color);
+  font-family: var(--default-font);
+}
+.go-to-portfolio-mainpage {
+  margin: 150px 0 100px;
+  text-align: center;
+}
+.go-to-portfolio-mainpage h2 {
+  margin-bottom: 20px;
+}
+.go-to-portfolio-mainpage h3 {
+  margin-bottom: 100px;
+}
+
+.go-to-portfolio-homepage-button {
+  background-color: var(--button-background-color);
+  border-radius: 81px;
+  padding: 15px 40px;
+  color: var(--secondary-background-color);
+  font-family: var(--default-font);
+}
+
+footer {
+  padding: 100px 0 50px;
+  text-align: center;
+}
+footer .email-icon {
+  padding-right: 20px;
+  width: 60px;
+}
+footer .facebook-icon {
+  padding-right: 20px;
+  width: 60px;
+}
+footer .instagram-icon {
+  padding-right: 20px;
+  width: 60px;
+}
 @media (max-width: 900px) {
   h1 {
     font-size: 48px;
@@ -104,4 +149,22 @@ ul li {
     padding: 10px 60px;
     margin-bottom: 25px;
   }
+}
+.about-me-homepage {
+  background-color: var(--primary-background-color);
+  text-align: center;
+  padding: 150px 20px;
+  line-height: 1.5;
+}
+.my-projects-homepage {
+  background-color: var(--primary-background-color);
+  text-align: center;
+  padding: 150px 20px;
+  line-height: 1.5;
+}
+.contact-homapage {
+  background-color: var(--primary-background-color);
+  text-align: center;
+  padding: 150px 20px;
+  line-height: 1.5;
 }
