added about me page

--- a/styles/style.css
+++ b/styles/style.css
@@ -50,6 +50,7 @@ h3 {
 .line-left {
   margin-left: 30px;
 }
+
 .skills-page {
   background-color: var(--secondary-background-color);
   padding: 40px 0;
@@ -152,9 +153,64 @@ footer .instagram-icon {
 }
 .about-me-homepage {
   background-color: var(--primary-background-color);
-  text-align: center;
-  padding: 150px 20px;
+  padding: 150px 20px 100px;
   line-height: 1.5;
+  text-align: center;
+}
+.about-me-content {
+  margin: 100px;
+  text-align: center;
+}
+.about-me-content h1 {
+  margin-bottom: 50px;
+}
+.about-me-content h2 {
+  font-size: 48px;
+  line-height: 1.5;
+}
+.about-me-content h3 {
+  font-size: 24px;
+  font-weight: bold;
+  opacity: 75%;
+  line-height: 1.5;
+}
+.about-me-content p {
+  padding: 20px 20px;
+  font-family: var(--default-font);
+  line-height: 2.5;
+  text-align: center;
+}
+.about-me-button {
+  background-color: var(--button-background-color);
+  border-radius: 81px;
+  padding: 15px 40px;
+  color: var(--secondary-background-color);
+  font-family: var(--default-font);
+}
+.about-me-contact {
+  background-color: var(--secondary-background-color);
+  margin: 0;
+  text-align: center;
+  padding: 100px;
+}
+.about-me-contact h2 {
+  padding: 10px;
+  margin-bottom: 30px;
+  font-size: 30px;
+}
+.about-me-contact-email {
+  text-decoration: none;
+  color: var(--primary-text-color);
+  font-size: 28px;
+}
+
+.about-me-contact-button {
+  background-color: var(--button-background-color);
+  border-radius: 81px;
+  padding: 15px 40px;
+  color: var(--secondary-background-color);
+  font-family: var(--default-font);
+  margin-top: 30px;
 }
 .my-projects-homepage {
   background-color: var(--primary-background-color);
