organised css and added my projects page

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,89 +17,13 @@ h1 {
   color: var(--primary-text-color);
   font-size: 96px;
   font-weight: bold;
-  margin-bottom: 30px;
-  text-align: center;
 }
 h3 {
   font-size: 18px;
 }
-.main-h2 {
-  color: var(--text-color);
-  margin-bottom: 100px;
-}
-
-.homepage-top {
-  background-color: var(--primary-background-color);
-  text-align: center;
-  padding: 150px 20px;
-  line-height: 1.5;
-}
-.intro {
-  font-size: 64px;
-}
-.homepage-top-button {
-  background-color: var(--button-background-color);
-  border-radius: 81px;
-  padding: 15px 40px;
-  color: var(--secondary-background-color);
-  font-family: var(--default-font);
-}
-.line-right {
-  margin-right: 30px;
-}
-.line-left {
-  margin-left: 30px;
-}
-
-.skills-page {
-  background-color: var(--secondary-background-color);
-  padding: 40px 0;
-}
-.my-skills {
-  padding: 10px;
-  margin: 20px 0 40px;
-}
-.ul-skills1 {
-  text-align: center;
-}
-.ul-skills2 {
-  text-align: center;
-}
 ul li {
   padding: 0 40px 40px;
 }
-.certificates {
-  padding: 10px;
-  margin: 20px 0 20px;
-}
-
-.shadow {
-  box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%);
-}
-.navbar-brand {
-  font-size: 34 px;
-  color: var(--primary-text-color);
-  font-family: var(--default-font);
-}
-.go-to-portfolio-mainpage {
-  margin: 150px 0 100px;
-  text-align: center;
-}
-.go-to-portfolio-mainpage h2 {
-  margin-bottom: 20px;
-}
-.go-to-portfolio-mainpage h3 {
-  margin-bottom: 100px;
-}
-
-.go-to-portfolio-homepage-button {
-  background-color: var(--button-background-color);
-  border-radius: 81px;
-  padding: 15px 40px;
-  color: var(--secondary-background-color);
-  font-family: var(--default-font);
-}
-
 footer {
   padding: 100px 0 50px;
   text-align: center;
@@ -116,6 +40,75 @@ footer .instagram-icon {
   padding-right: 20px;
   width: 60px;
 }
+.navbar-brand {
+  font-size: 34 px;
+  color: var(--primary-text-color);
+  font-family: var(--default-font);
+}
+.homepage-content {
+  background-color: var(--primary-background-color);
+  text-align: center;
+  padding: 150px 20px;
+  line-height: 1.5;
+}
+.homepage-content h1 {
+  margin-bottom: 30px;
+  text-align: center;
+}
+.homepage-content h2 {
+  color: var(--text-color);
+  margin-bottom: 100px;
+}
+.homepage-content p {
+  font-size: 64px;
+}
+.homepage-top-button {
+  background-color: var(--button-background-color);
+  border-radius: 81px;
+  padding: 15px 40px;
+  color: var(--secondary-background-color);
+  font-family: var(--default-font);
+}
+.line-right {
+  margin-right: 30px;
+}
+.line-left {
+  margin-left: 30px;
+}
+
+.skills-page-content {
+  background-color: var(--secondary-background-color);
+  padding: 40px 0;
+}
+.skills-page-content h2 {
+  padding: 10px;
+  margin: 20px 0 40px;
+}
+
+.certificates-page-content {
+  padding: 10px;
+  margin: 20px 0 20px;
+}
+
+.go-to-portfolio-homepage {
+  margin: 150px 0 100px;
+  text-align: center;
+}
+.go-to-portfolio-homepage h2 {
+  margin-bottom: 20px;
+}
+.go-to-portfolio-homepage h3 {
+  margin-bottom: 100px;
+}
+
+.go-to-portfolio-homepage-button {
+  background-color: var(--button-background-color);
+  border-radius: 81px;
+  padding: 15px 40px;
+  color: var(--secondary-background-color);
+  font-family: var(--default-font);
+}
+
 @media (max-width: 900px) {
   h1 {
     font-size: 48px;
@@ -151,18 +144,16 @@ footer .instagram-icon {
     margin-bottom: 25px;
   }
 }
-.about-me-homepage {
-  background-color: var(--primary-background-color);
-  padding: 150px 20px 100px;
-  line-height: 1.5;
-  text-align: center;
-}
+
 .about-me-content {
-  margin: 100px;
+  padding: 80px 20px;
+  line-height: 1.5;
+  background-color: var(--primary-background-color);
+  margin: 0;
   text-align: center;
 }
 .about-me-content h1 {
-  margin-bottom: 50px;
+  margin: 50px;
 }
 .about-me-content h2 {
   font-size: 48px;
@@ -214,9 +205,15 @@ footer .instagram-icon {
 }
 .my-projects-homepage {
   background-color: var(--primary-background-color);
-  text-align: center;
   padding: 150px 20px;
   line-height: 1.5;
+}
+.my-projects-content h1 {
+  margin-bottom: 100px;
+}
+
+.nioly-site-img {
+  width: 400px;
 }
 .contact-homapage {
   background-color: var(--primary-background-color);
