--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,9 @@
   --text-color: #111111;
   --button-background-color: #b17f88;
 }
+body {
+  line-height: 1.5;
+}
 h1,
 h2,
 h3,
@@ -25,7 +28,13 @@ ul li {
   padding: 0 40px 40px;
 }
 footer {
-  margin: 60px;
+  padding: 20px;
+}
+footer h2 {
+  margin: 20px 0;
+}
+footer h3 {
+  font-size: 18px;
 }
 
 footer .icons a {
@@ -56,7 +65,6 @@ footer .go-to-portfolio-homepage-button {
 .homepage-content {
   background-color: var(--primary-background-color);
   padding: 150px 20px;
-  line-height: 1.5;
 }
 .homepage-content h1 {
   margin-bottom: 30px;
@@ -131,24 +139,20 @@ footer .go-to-portfolio-homepage-button {
   }
 }
 
-.about-me-content {
-  padding: 80px 20px;
-  line-height: 1.5;
-  background-color: var(--primary-background-color);
-  margin: 0;
+.about-me-content-main {
+  background-color: var(--secondary-background-color);
+  padding: 40px 0;
 }
 .about-me-content h1 {
   margin: 50px;
 }
 .about-me-content h2 {
   font-size: 48px;
-  line-height: 1.5;
 }
 .about-me-content h3 {
   font-size: 24px;
   font-weight: bold;
   opacity: 75%;
-  line-height: 1.5;
 }
 .about-me-content p {
   padding: 20px 20px;
@@ -161,17 +165,15 @@ footer .go-to-portfolio-homepage-button {
   padding: 15px 40px;
   color: var(--secondary-background-color);
   font-family: var(--default-font);
+  margin-top: 50px 0 30px;
 }
-.about-me-contact {
-  background-color: var(--secondary-background-color);
-  margin: 0;
 
-  padding: 100px;
-}
 .about-me-contact h2 {
-  padding: 10px;
-  margin-bottom: 30px;
   font-size: 30px;
+  padding: 20px;
+}
+.about-me-contact-container {
+  padding: 70px 0 0;
 }
 
 .about-me-contact-button {
@@ -184,12 +186,9 @@ footer .go-to-portfolio-homepage-button {
 }
 .my-projects-homepage {
   background-color: var(--secondary-background-color);
-  padding: 150px 20px;
-  line-height: 1.5;
+  padding: 100px 0 40px;
 }
-.my-projects-container {
-  margin-top: 100px;
-}
+
 .project-content {
   margin: 100px 0 50px 0;
 }
@@ -208,9 +207,7 @@ footer .go-to-portfolio-homepage-button {
 
 .contact-me-main-page {
   background-color: var(--secondary-background-color);
-  margin: 50px 0;
-  text-align: center;
-  padding: 70px 0;
+  padding: 100px 0 40px;
 }
 a {
   text-decoration: none;
