--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@ ul li {
   padding: 0 40px 40px;
 }
 footer {
-  padding: 20px;
+  padding: 10px;
 }
 footer h2 {
   margin: 20px 0;
@@ -55,6 +55,10 @@ footer .go-to-portfolio-homepage-button {
   color: var(--secondary-background-color);
   font-family: var(--default-font);
   margin: 30px 50px 30px 0;
+}
+.coded-by {
+  font-size: 14px;
+  padding: 50px 0 0;
 }
 
 .navbar-brand {
@@ -188,9 +192,13 @@ footer .go-to-portfolio-homepage-button {
   background-color: var(--secondary-background-color);
   padding: 100px 0 40px;
 }
+.my-projects-homepage h1 {
+  padding: 20px;
+}
 
 .project-content {
   margin: 100px 0 50px 0;
+  padding: 40px;
 }
 .my-project-main-button {
   background-color: var(--button-background-color);
